# simcoe-commons

./: .clang-format  .clang-tidy  .editorconfig  .gitignore  README.md  meson.build  meson_options.txt
.github/workflows/: build.yaml  docs.yaml  format.yaml
modules/concurrent/: meson.build
modules/concurrent/include/simcoe/concurrent/: annotations.hpp  exports.hpp  limiting_flag.hpp  mailbox.hpp  ring_buffer.hpp
modules/concurrent/include/simcoe/concurrent/detail/: ring_buffer_bitset_detail.hpp
modules/concurrent/resources/: concurrent.dox
modules/concurrent/src/: limiting_flag.cpp
modules/concurrent/test/: limiting_flag_test.cpp  mailbox_test.cpp  ring_buffer_test.cpp
modules/defer/: meson.build
modules/defer/include/simcoe/defer/: defer.hpp
modules/defer/test/: defer_test.cpp
modules/version/: meson.build
modules/version/include/simcoe/version/: meson.build  version.hpp.in
resources/: Doxyfile.in  cite.bib
